# cargo-nix

./: Cargo.nix  Cargo.toml  default.nix  shell.nix
nix/: sources.json
src/: crates_io.rs  main.rs  nix.rs  opts.rs
