[package]
name = "cargo-nix"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.0.1", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
flate2 = "1.0.19"
tar = "0.4.30"
tempfile = "3.2.0"
clap = "3.0.0-beta.2"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
color-eyre = "0.5.10"
tracing-error = "0.1.2"
bstr = "0.2.14"
